<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/dialog_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/pay"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            tools:text="$7.5"
            android:textSize="20sp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/select_pay_type"
        android:gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/wechat"
                android:textSize="12sp"
                />
            <ImageView
                android:id="@+id/iv_wechat"
                android:layout_margin="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                tools:src="@mipmap/b1"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/alipay"
                android:textSize="12sp"
                />
            <ImageView
                android:id="@+id/iv_alipay"
                android:layout_margin="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                tools:src="@mipmap/b2"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>



    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay_in_90s"
        android:textSize="12sp"
        android:gravity="center_horizontal"
        />
    <Button
        android:id="@+id/btn_qrcode_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/close"/>
</LinearLayout>